add batch, x